fill in contact and menu page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
 
 :root {
 	--shadow-color: 256deg 6% 21%;
@@ -11,84 +11,138 @@
 		2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.36),
 		5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.36);
 
-    --bg-color: #fff1ca;
-    --secondary-bg: #ffffff;
-    --emphasis-color: #e67514;
-    --secondary-color: #06923e;
-    --normal-font-color: #000;
+	--bg-color: #fff1ca;
+	--secondary-bg: #ffffff;
+	--emphasis-color: #e67514;
+	--secondary-color: #06923e;
+	--normal-font-color: #000;
 
-    --title-font: "DM Serif Display", serif;
-    --body-font: "Roboto", sans-serif;;
+	--title-font: "DM Serif Display", serif;
+	--body-font: "Roboto", sans-serif;
 }
 
 html {
-    padding: 0;
+	padding: 0;
 }
 
 body {
 	background-color: var(--bg-color);
-    font-family: var(--body-font);
-    margin: 0;
+	font-family: var(--body-font);
+	margin: 0;
 }
 
 header {
-    position: sticky;
-    top: 0;
-    z-index: 1;
+	position: sticky;
+	top: 0;
+	z-index: 1;
+    margin-top: 1rem;
 }
 
 nav {
-    display: flex;
-    justify-content: center;
-    column-gap: 0.3rem;
-    height: 40px;
+	display: flex;
+	justify-content: center;
+	column-gap: 0.3rem;
+	height: 40px;
+}
+
+section {
+    margin-bottom: 2rem;
 }
 
 button {
-    background-color: var(--secondary-color);
-    color: var(--bg-color);
-    border: none;
-    border-radius: 5px;
-    width: 6rem;
-    height: 100%;
-    font-size: 1rem;
-    font-family: var(--body-font);
-    font-weight: 800;
-    box-shadow: var(--shadow-elevation-low);
+	background-color: var(--secondary-color);
+	color: var(--bg-color);
+	border: none;
+	border-radius: 5px;
+	width: 6rem;
+	height: 100%;
+	font-size: 1rem;
+	font-family: var(--body-font);
+	font-weight: 800;
+	box-shadow: var(--shadow-elevation-low);
 }
 
 button:hover {
-    font-size: 1.05rem;
+	font-size: 1.05rem;
 }
 
 button:active {
-    box-shadow: var(--shadow-elevation-medium);
+	box-shadow: var(--shadow-elevation-medium);
 }
 
-h1, h2 {
-    color: var(--emphasis-color);
-    font-weight: 800;
-    margin-bottom: 0;
-    text-shadow: 2px 2px 0px var(--normal-font-color);
+h1,
+h2 {
+	color: var(--emphasis-color);
+	font-weight: 800;
+	margin-bottom: 0;
+	text-shadow: 2px 2px 0px var(--normal-font-color);
+}
+
+table {
+	width: min(35rem, 100vw);
+	border-collapse: collapse;
+}
+
+th,
+td {
+	padding: 0.75rem;
+	border-bottom: 1px solid var(--emphasis-color);
+}
+
+th {
+	color: var(--secondary-bg);
+	background-color: var(--secondary-color);
+}
+
+#contact-info p {
+    margin: 0.15rem 0;
+}
+
+form {
+	width: min(30rem, calc(100vw - 2rem));
+	margin-top: 1rem;
+}
+
+input,
+textarea {
+	padding: 0.7rem;
+	border-radius: 4px;
+    border: 1px solid var(--secondary-color);
+}
+
+textarea {
+    width: 95%;
+}
+
+#name-input,
+#email-input {
+    width: 70%;
+    padding: 0.3rem 0.7rem;
+}
+
+.button-full-width {
+    padding: 0.5rem;
+    width: 100%;
+    border-radius: 1rem;
 }
 
 .green-bg {
-    background-color: var(--secondary-color);
+	background-color: var(--secondary-color);
 }
 
 .review-card {
-    width: 100%;
-    border-radius: 20px;
-    padding: 0 0.5rem;
-    background-color: var(--secondary-bg);
+	width: 100%;
+	border-radius: 20px;
+	padding: 0 0.5rem;
+	background-color: var(--secondary-bg);
 }
 
 .review-card-row {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-    width: 90%;
-    margin: 1rem 0;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	gap: 2rem;
+	width: 90%;
+	margin: 1rem 0;
 }
 
 .full-content-middle {
@@ -97,47 +151,51 @@ h1, h2 {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-    height: calc(100vh - 40px);
+	height: calc(100vh - 40px);
 }
 
 .content-middle {
-    display: flex;
+	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 }
 
+.content-left {
+	text-align: left;
+}
+
 #title-img {
 	width: max(450px, 45%);
 	filter: drop-shadow(15px 30px 0px var(--emphasis-color));
 	z-index: 0;
-    margin-top: clamp(-110px ,-15vw, -80px);
-    margin-bottom: -1.5rem;
+	margin-top: clamp(-110px, -15vw, -80px);
+	margin-bottom: -1.5rem;
 }
 
 .title-text {
-    filter: drop-shadow(15px 20px 0px var(--secondary-bg));
-    font-size: min(8rem, 19vw);
-    font-family: var(--title-font);
-    margin: 0;
+	filter: drop-shadow(15px 20px 0px var(--secondary-bg));
+	font-size: min(8rem, 19vw);
+	font-family: var(--title-font);
+	margin: 0;
 }
 
 .subtitle {
 	color: var(--normal-font-color);
-    font-size: 1.2rem;
-    font-style: italic;
+	font-size: 1.2rem;
+	font-style: italic;
 }
 
 .underline {
-    text-decoration: var(--secondary-color) underline;
-    text-decoration-thickness: 3px;
+	text-decoration: var(--secondary-color) underline;
+	text-decoration-thickness: 3px;
 }
 
 footer {
-    text-align: center;
-    width: 100%;
-    padding: 1rem 0;
-    margin-top: 5rem;
-    color: var(--bg-color);
+	text-align: center;
+	width: 100%;
+	padding: 1rem 0;
+	margin-top: 5rem;
+	color: var(--bg-color);
 }
