make page pressed button change color

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,14 @@ nav {
 	height: 40px;
 }
 
+nav button:focus {
+    background-color: var(--emphasis-color);
+}
+
+nav button:focus::after {
+    content: "🍜";
+}
+
 section {
     margin-bottom: 2rem;
 }
